# dynamatic

./: .gitignore  build.sh
.github/workflows/: ci.yml
data/: components.json  rtl-config-smv.json  rtl-config-verilog.json  rtl-config-vhdl.json
data/vhdl/: elastic_components.vhd
docs/: SUMMARY.md
docs/Specs/: BufferType.md  Buffertype.md
docs/UserGuide/: OptimizationsAndDirectives.md
integration-test/: .gitignore
integration-test/fixed/: fixed.c
integration-test/if_convert/: buffer.json  cf.mlir  if_convert.c
integration-test/insertion_sort/: insertion_sort.c
integration-test/kernel_3mm/: kernel_3mm.c
integration-test/kmp/: kmp.c
integration-test/loop_path/: cf.mlir  loop_path.c
integration-test/lu/: lu.c
integration-test/matching/: matching.c
integration-test/matching_2/: matching_2.c
integration-test/nested_loop/: buffer.json  cf.mlir  nested_loop.c
integration-test/single_loop/: buffer.json  cf.mlir  single_loop.c
integration-test/sparse/: sparse.c
integration-test/subdiag/: buffer.json  subdiag.c
integration-test/subdiag_fast/: buffer.json  subdiag_fast.c
lib/Support/: CFG.cpp  TimingModels.cpp
lib/Transforms/: CMakeLists.txt  ConsumeProducerOutputAttrMarker.cpp  HandshakeDeactivateMemDependencies.cpp  (+3 more)
lib/Transforms/BufferPlacement/: BufferPlacementMILP.cpp  CMakeLists.txt  CostAwareBuffers.cpp  FPGA20Buffers.cpp  FPGA24Buffers.cpp  FPL22Buffers.cpp  HandshakePlaceBuffers.cpp  HandshakeSetBufferingProperties.cpp  LatencyAndOccupancyBalancingSupport.cpp  MAPBUFBuffers.cpp
lib/Transforms/BufferPlacement/Utils/: BufferPlacementMILP.cpp  BufferingSupport.cpp  CFDFC.cpp  UnitMILPVars.cpp
test/: CMakeLists.txt  lit.cfg.py
tools/: CMakeLists.txt
tools/source-rewriter/: .clang-tidy  CMakeLists.txt  SourceRewriter.cpp
(+143 files in other folders)
